--- a/css/styles.css
+++ b/css/styles.css
@@ -212,10 +212,10 @@ nav a:hover, nav a.active {
 }
 
 /* Overlay for sold out items */
-.strain-card.unavailable .strain-img {
+/* .strain-card.unavailable .strain-img {
     filter: grayscale(70%);
     opacity: 0.7;
-}
+} */
 
 /* Make unavailable cards non-clickable */
 .strain-card.unavailable {
