--- a/css/styles.css
+++ b/css/styles.css
@@ -843,33 +843,37 @@ footer {
     width: 100%;
     aspect-ratio: 1/1;
     border-radius: 5px;
+    cursor: pointer;
+    border: 2px solid transparent;
     overflow: hidden;
+    transition: all 0.3s;
+    opacity: 0.7;
+}
+
+.option-image-container:hover, 
+.option-image-container.active {
+    opacity: 1;
+    border-color: var(--cyan);
 }
 
 .option-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 5px;
-    cursor: pointer;
-    opacity: 0.7;
-    transition: all 0.3s;
-    border: 2px solid transparent;
 }
 
-.option-image:hover, .option-image.active {
-    opacity: 1;
-    border-color: var(--cyan);
-}
-
-.option-image[data-no-image] {
+.placeholder-image {
     background-color: #444;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .no-image-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    font-size: 0.8rem;
     pointer-events: none;
 }
 
